XIVY-9828 Hide default security system if no app assigned